crates/biome_html_parser/tests/html_specs/ok/vue/generic-directives/modifiers-no-arg-no-value.vue
<p v-foo.bar></p>
<p class="flex" v-foo.bar></p>
<p v-foo.bar class="flex"></p>
