crates/biome_html_parser/tests/html_specs/error/vue/invalid-v-slot-shorthand.vue
<template # data-foo="bar" foo="bar"></template>
